# AutopPainter

./: .gitignore  CMakeLists.txt  README.md
docs/: checkpoints.md
include/autopainter/: command.hpp  image_classifier.hpp  json_writer.hpp  palette.hpp  planner.hpp
src/: command.cpp  image_classifier.cpp  json_writer.cpp  main.cpp  palette.cpp  planner.cpp
tools/: checkpoint_distance.cpp
